WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278136
[UnifiedPDF] Context clicking outside a document should not clear the selection
https://bugs.webkit.org/show_bug.cgi?id=278136
Summary
[UnifiedPDF] Context clicking outside a document should not clear the selection
Abrar Rahman Protyasha
Reported
2024-08-14 17:50:04 PDT
rdar://128480285
Attachments
Add attachment
proposed patch, testcase, etc.
Abrar Rahman Protyasha
Comment 1
2024-08-14 17:56:56 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32220
EWS
Comment 2
2024-08-14 18:27:45 PDT
Committed
282268@main
(4b6a66bd7beb): <
https://commits.webkit.org/282268@main
> Reviewed commits have been landed. Closing PR #32220 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug