[UnifiedPDF] Context clicking outside a document should not clear the selection https://bugs.webkit.org/show_bug.cgi?id=278136 rdar://128480285

Reviewed by Sammy Gill.

Previously, context menu events fired outside of the document bounds
would clear the current selection, which matched behavior in the Preview
app. However, it would be more aligned with web content had we done the
converse.

This patch addresses the design sentiment captured in the bug by only
tracking a new selection if the context menu event is fired from inside
the document bounds.

* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:
(WebKit::UnifiedPDFPlugin::handleMouseEvent):

Canonical link: https://commits.webkit.org/282268@main